--- a/package.json
+++ b/package.json
@@ -3,20 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "^4.5.3",
+    "bootstrap": "^4.6.0",
     "lodash": "^4.17.20",
-    "moment": "^2.23.0",
+    "moment": "^2.29.1",
+    "nanoid": "^3.1.20",
     "node-sass": "^4.14.1",
-    "react": "^16.7.0",
-    "react-datepicker": "^2.0.0",
-    "react-dom": "^16.7.0",
-    "react-json-view": "^1.19.1",
-    "react-redux": "^6.0.0",
+    "react": "^16.14.0",
+    "react-datepicker": "^2.16.0",
+    "react-dom": "^16.14.0",
+    "react-json-view": "^1.21.1",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.1",
+    "react-scripts": "^4.0.2",
     "reactstrap": "^6.5.0",
-    "redux": "^4.0.1",
-    "redux-form": "^8.1.0",
+    "redux": "^4.0.5",
+    "redux-form": "^8.3.7",
     "redux-persist": "^5.10.0"
   },
   "scripts": {
